--- a/UI/Views/Customer/Index.cshtml
+++ b/UI/Views/Customer/Index.cshtml
@@ -29,6 +29,7 @@
                     <td>@item.Email</td>
                     <td class="text-center">
                         @*<a class="btn btn-danger" asp-controller="Customer" asp-action="Delete" asp-route-id="@item.Id"><i class="fas fa-user-minus"></i></a>*@
+                        <a class="btn btn-primary" asp-controller="Customer" asp-action="Details" asp-route-id="@item.Id"><i class="far fa-eye"></i></a>
                         <a class="btn btn-warning" asp-controller="Customer" asp-action="Edit" asp-route-id="@item.Id"><i class="fas fa-user-edit"></i></a>
                     </td>
                 </tr>
@@ -38,24 +39,35 @@
 </div>
 
 @section Styles{
-    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.24/css/dataTables.bootstrap4.min.css">
-    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/buttons/1.7.0/css/buttons.bootstrap4.min.css">
-    <link href="~/lib/font-awesome/css/all.css" rel="stylesheet" />
+    @*<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.24/css/dataTables.bootstrap4.min.css">*@
+    <link href="~/lib/datatables/css/dataTables.bootstrap4.min.css" rel="stylesheet" />
+    @*<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/buttons/1.7.0/css/buttons.bootstrap4.min.css">*@
+    <link href="~/lib/datatables.net-buttons-bs4/buttons.bootstrap4.min.css" rel="stylesheet" />
 }
 
 
 @section Scripts{
-    <script src="~/lib/font-awesome/js/all.js"></script>
-    <script type="text/javascript" language="javascript" src="https://cdn.datatables.net/1.10.24/js/jquery.dataTables.min.js"></script>
-    <script type="text/javascript" language="javascript" src="https://cdn.datatables.net/1.10.24/js/dataTables.bootstrap4.min.js"></script>
-    <script type="text/javascript" language="javascript" src="https://cdn.datatables.net/buttons/1.7.0/js/dataTables.buttons.min.js"></script>
-    <script type="text/javascript" language="javascript" src="https://cdn.datatables.net/buttons/1.7.0/js/buttons.bootstrap4.min.js"></script>
-    <script type="text/javascript" language="javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>
-    <script type="text/javascript" language="javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/pdfmake.min.js"></script>
-    <script type="text/javascript" language="javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/vfs_fonts.js"></script>
-    <script type="text/javascript" language="javascript" src="https://cdn.datatables.net/buttons/1.7.0/js/buttons.html5.min.js"></script>
-    <script type="text/javascript" language="javascript" src="https://cdn.datatables.net/buttons/1.7.0/js/buttons.print.min.js"></script>
-    <script type="text/javascript" language="javascript" src="https://cdn.datatables.net/buttons/1.7.0/js/buttons.colVis.min.js"></script>
+    @*<script type="text/javascript" language="javascript" src="https://cdn.datatables.net/1.10.24/js/jquery.dataTables.min.js"></script>*@
+    <script src="~/lib/datatables/js/jquery.dataTables.min.js"></script>
+    @*<script type="text/javascript" language="javascript" src="https://cdn.datatables.net/1.10.24/js/dataTables.bootstrap4.min.js"></script>*@
+    <script src="~/lib/datatables/js/dataTables.bootstrap4.min.js"></script>
+    @*<script type="text/javascript" language="javascript" src="https://cdn.datatables.net/buttons/1.7.0/js/dataTables.buttons.min.js"></script>*@
+    <script src="~/lib/datatables.net-buttons/js/dataTables.buttons.min.js"></script>
+    @*<script type="text/javascript" language="javascript" src="https://cdn.datatables.net/buttons/1.7.0/js/buttons.bootstrap4.min.js"></script>*@
+    <script src="~/lib/datatables.net-buttons-bs4/buttons.bootstrap4.min.js"></script>
+    @*<script type="text/javascript" language="javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>*@
+    <script src="~/lib/jszip/jszip.min.js"></script>
+    @*<script type="text/javascript" language="javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/pdfmake.min.js"></script>*@
+    <script src="~/lib/pdfmake/pdfmake.min.js"></script>
+    @*<script type="text/javascript" language="javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/vfs_fonts.js"></script>*@
+    <script src="~/lib/pdfmake/vfs_fonts.min.js"></script>
+
+    @*<script type="text/javascript" language="javascript" src="https://cdn.datatables.net/buttons/1.7.0/js/buttons.html5.min.js"></script>*@
+    <script src="~/lib/datatables.net-buttons/js/buttons.html5.min.js"></script>
+    @*<script type="text/javascript" language="javascript" src="https://cdn.datatables.net/buttons/1.7.0/js/buttons.print.min.js"></script>*@
+    <script src="~/lib/datatables.net-buttons/js/buttons.print.min.js"></script>
+    @*<script type="text/javascript" language="javascript" src="https://cdn.datatables.net/buttons/1.7.0/js/buttons.colVis.min.js"></script>*@
+    <script src="~/lib/datatables.net-buttons/js/buttons.colVis.min.js"></script>
     <script>
         $(document).ready(function () {
             var table = $('#customers').DataTable({
