--- a/UI/Views/Customer/Details.cshtml
+++ b/UI/Views/Customer/Details.cshtml
@@ -2,49 +2,56 @@
 @{
     ViewData["Title"] = "Müşteri Detay";
 }
-<div class="my-5">
+<div class="mt-3 mb-4">
     <h3 class="d-inline">Müşteri Detayları <a class="btn btn-warning" asp-controller="Customer" asp-action="Edit" asp-route-id="@Model.Id"><i class="fas fa-user-edit"></i></a></h3>
-    
 </div>
+<hr />
 <div class="row">
     <div class="col-3">
         <p><b>Ad-Soyad</b></p>
         <p><b>E-Posta</b></p>
         <p><b>Cep Telefonu</b></p>
         <p><b>Ev Telefonu</b></p>
+        <p><b>Tipi</b></p>
     </div>
     <div class="col-9">
         <p>@Model.Fullname</p>
         <p>@Model.Email</p>
         <p>@Model.MobileNumber</p>
         <p>@Model.HousePhoneNumber</p>
+        <p>@string.Join(", ", Model.CustomerTypes.Select(x => x.CustomerType.Type))</p>
     </div>
 </div>
 
 <div class="mt-3">
-    <table class="table table-striped table-bordered" style="width:100%">
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>İlçe</th>
-                <th>Şehir</th>
-                <th>Satış Türü</th>
-                <th>İşlem</th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var item in Model.Estates)
-            {
+    <h4 class="text-center display-5">Emlaklar</h4>
+    <div class="overflow-auto">
+        <table class="table table-striped table-bordered" style="width:100%">
+            <thead>
                 <tr>
-                    <td>@item.Id</td>
-                    <td>@item.District.Name</td>
-                    <td>@item.District.City.Name</td>
-                    <td>@item.EstateType.Type</td>
-                    <td class="text-center">
-                        <a class="btn btn-primary" asp-controller="Estate" asp-action="Details" asp-route-id="@item.Id"><i class="far fa-eye"></i></a>
-                    </td>
+                    <th>Satış Türü</th>
+                    <th>İlçe</th>
+                    <th>Şehir</th>
+                    <th>MetreKare</th>
+                    <th>Eklenme Tarihi</th>
+                    <th>İşlem</th>
                 </tr>
-            }
-    </table>
+            </thead>
+            <tbody>
+                @foreach (var item in Model.Estates.OrderByDescending(x => x.ModifiedDate))
+                {
+                    <tr>
+                        <td>@item.EstateType.Type</td>
+                        <td>@item.District.Name</td>
+                        <td>@item.District.City.Name.ToUpper()</td>
+                        <td>@item.SquareMeter</td>
+                        <td>@item.ModifiedDate.ToLocalTime()</td>
+                        <td class="text-center">
+                            <a class="btn btn-primary" asp-controller="Estate" asp-action="Details" asp-route-id="@item.Id"><i class="far fa-eye"></i></a>
+                        </td>
+                    </tr>
+                }
+        </table>
+    </div>
 
 </div>
