--- a/UI/Views/Customer/Edit.cshtml
+++ b/UI/Views/Customer/Edit.cshtml
@@ -2,11 +2,13 @@
 @{
     ViewData["Title"] = "Müşteri Düzenle";
 }
-<div class="my-5">
+<div class="mt-3 mb-4">
     <h3>Müşteri Düzenle</h3>
 </div>
+    <hr />
 <div>
     <form asp-controller="Customer" asp-action="Edit" method="post">
+        <input type="hidden" asp-for="Id"/>
         <div class="form-group row">
             <label asp-for="Fullname" class="col-sm-2 col-form-label">Ad-Soyad</label>
             <div class="col-sm-10">
@@ -61,6 +63,7 @@
             <div class="col-sm-10 ">
                 <button type="submit" class="btn btn-primary d-inline">Kaydet</button>
                 <a type="button" asp-controller="Customer" asp-action="Delete" asp-route-id="@Model.Id" class="btn btn-danger d-inline" onclick="return confirm('Bu kişiyi silmek istediğinizden emin misiniz?')">Sil</a>
+                <a type="button" href="javascript:history.go(-1)" class="btn btn-dark d-inline">İptal</a>
             </div>
         </div>
     </form>
