--- a/UI/Views/Customer/Index.cshtml
+++ b/UI/Views/Customer/Index.cshtml
@@ -4,17 +4,16 @@
 }
 <div class="d-block">
     <h3 class="d-inline">Müşteriler</h3>
-    <a class="btn btn-primary float-right" asp-controller="Customer" asp-action="Add">Müşteri Ekle</a>
+    <a class="btn btn-primary float-right" asp-controller="Customer" asp-action="Add"><i class="fas fa-user-plus"></i> Müşteri Kayıt</a>
 </div>
 <div id="tableDiv" class="mt-3">
     <table id="customers" class="table table-striped table-bordered" style="width:100%">
         <thead>
             <tr>
-                <th>Id</th>
                 <th>Tam Ad</th>
-                <th>Ev Tel</th>
-                <th>Cep Tel</th>
                 <th>EPosta</th>
+                <th>Cep Tel</th>
+                <th>Ev Tel</th>
                 <th>İşlem</th>
             </tr>
         </thead>
@@ -22,15 +21,13 @@
             @foreach (var item in Model)
             {
                 <tr>
-                    <td>@item.Id</td>
                     <td>@item.Fullname</td>
-                    <td>@item.HousePhoneNumber</td>
-                    <td>@item.MobileNumber</td>
                     <td>@item.Email</td>
+                    <td>@item.MobileNumber</td>
+                    <td>@item.HousePhoneNumber</td>
                     <td class="text-center">
-                        @*<a class="btn btn-danger" asp-controller="Customer" asp-action="Delete" asp-route-id="@item.Id"><i class="fas fa-user-minus"></i></a>*@
-                        <a class="btn btn-primary" asp-controller="Customer" asp-action="Details" asp-route-id="@item.Id"><i class="far fa-eye"></i></a>
-                        <a class="btn btn-warning" asp-controller="Customer" asp-action="Edit" asp-route-id="@item.Id"><i class="fas fa-user-edit"></i></a>
+                        <a class="btn btn-outline-primary" asp-controller="Customer" asp-action="Details" asp-route-id="@item.Id"><i class="far fa-eye"></i></a>
+                        <a class="btn btn-outline-warning" asp-controller="Customer" asp-action="Edit" asp-route-id="@item.Id"><i class="fas fa-user-edit"></i></a>
                     </td>
                 </tr>
             }
@@ -39,39 +36,27 @@
 </div>
 
 @section Styles{
-    @*<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.24/css/dataTables.bootstrap4.min.css">*@
     <link href="~/lib/datatables/css/dataTables.bootstrap4.min.css" rel="stylesheet" />
-    @*<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/buttons/1.7.0/css/buttons.bootstrap4.min.css">*@
     <link href="~/lib/datatables.net-buttons-bs4/buttons.bootstrap4.min.css" rel="stylesheet" />
 }
 
 
 @section Scripts{
-    @*<script type="text/javascript" language="javascript" src="https://cdn.datatables.net/1.10.24/js/jquery.dataTables.min.js"></script>*@
     <script src="~/lib/datatables/js/jquery.dataTables.min.js"></script>
-    @*<script type="text/javascript" language="javascript" src="https://cdn.datatables.net/1.10.24/js/dataTables.bootstrap4.min.js"></script>*@
     <script src="~/lib/datatables/js/dataTables.bootstrap4.min.js"></script>
-    @*<script type="text/javascript" language="javascript" src="https://cdn.datatables.net/buttons/1.7.0/js/dataTables.buttons.min.js"></script>*@
     <script src="~/lib/datatables.net-buttons/js/dataTables.buttons.min.js"></script>
-    @*<script type="text/javascript" language="javascript" src="https://cdn.datatables.net/buttons/1.7.0/js/buttons.bootstrap4.min.js"></script>*@
     <script src="~/lib/datatables.net-buttons-bs4/buttons.bootstrap4.min.js"></script>
-    @*<script type="text/javascript" language="javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>*@
     <script src="~/lib/jszip/jszip.min.js"></script>
-    @*<script type="text/javascript" language="javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/pdfmake.min.js"></script>*@
     <script src="~/lib/pdfmake/pdfmake.min.js"></script>
-    @*<script type="text/javascript" language="javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/vfs_fonts.js"></script>*@
     <script src="~/lib/pdfmake/vfs_fonts.min.js"></script>
-
-    @*<script type="text/javascript" language="javascript" src="https://cdn.datatables.net/buttons/1.7.0/js/buttons.html5.min.js"></script>*@
     <script src="~/lib/datatables.net-buttons/js/buttons.html5.min.js"></script>
-    @*<script type="text/javascript" language="javascript" src="https://cdn.datatables.net/buttons/1.7.0/js/buttons.print.min.js"></script>*@
     <script src="~/lib/datatables.net-buttons/js/buttons.print.min.js"></script>
-    @*<script type="text/javascript" language="javascript" src="https://cdn.datatables.net/buttons/1.7.0/js/buttons.colVis.min.js"></script>*@
     <script src="~/lib/datatables.net-buttons/js/buttons.colVis.min.js"></script>
     <script>
         $(document).ready(function () {
             var table = $('#customers').DataTable({
-                "order": [[0, "desc"]],
+                "scrollX": true,
+                "ordering": false,
                 lengthChange: false,
                 buttons: ['copy', 'excel', 'pdf', 'colvis']
             });
