--- a/UI/Views/Home/Index.cshtml
+++ b/UI/Views/Home/Index.cshtml
@@ -1,9 +1,9 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Ana Sayfa";
 }
 
 <div class="text-center">
-    <a class="btn btn-primary" asp-controller="Customer" asp-action="Add">Müşteri Kayıt</a>
+    <a class="btn btn-primary" asp-controller="Customer" asp-action="Add"><i class="fas fa-user-plus"></i> Müşteri Kayıt</a>
 </div>
 
 
