--- a/UI/wwwroot/css/site.css
+++ b/UI/wwwroot/css/site.css
@@ -69,3 +69,9 @@ body {
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
 }
+
+.display-5 {
+    font-size: 1.5rem;
+    font-weight: 350;
+    line-height: 1.2;
+}
