Automapper eklendi, validationslar iyileştirildi.

--- a/UI/Views/Customer/Details.cshtml
+++ b/UI/Views/Customer/Details.cshtml
@@ -6,7 +6,7 @@
     <h3 class="d-inline">Müşteri Detayları <a class="btn btn-warning" asp-controller="Customer" asp-action="Edit" asp-route-id="@Model.Id"><i class="fas fa-user-edit"></i></a></h3>
 </div>
 <hr />
-<div class="row">
+<div class="row mt-5">
     <div class="col-3">
         <p><b>Ad-Soyad</b></p>
         <p><b>E-Posta</b></p>
