--- a/UI/Views/Customer/Edit.cshtml
+++ b/UI/Views/Customer/Edit.cshtml
@@ -1,36 +1,40 @@
-﻿@model Customer
+﻿@model CustomerViewModel
 @{
     ViewData["Title"] = "Müşteri Düzenle";
 }
 <div class="mt-3 mb-4">
     <h3>Müşteri Düzenle</h3>
 </div>
-    <hr />
+<hr />
 <div>
     <form asp-controller="Customer" asp-action="Edit" method="post">
-        <input type="hidden" asp-for="Id"/>
+        <input type="hidden" asp-for="Id" />
         <div class="form-group row">
             <label asp-for="Fullname" class="col-sm-2 col-form-label">Ad-Soyad</label>
             <div class="col-sm-10">
                 <input type="text" class="form-control" placeholder="Ad-Soyad" asp-for="Fullname">
+                <span asp-validation-for="Fullname" class="text-danger"></span>
             </div>
         </div>
         <div class="form-group row">
             <label asp-for="Email" class="col-sm-2 col-form-label">Eposta</label>
             <div class="col-sm-10">
                 <input type="email" class="form-control" placeholder="Eposta" asp-for="Email">
+                <span asp-validation-for="Email" class="text-danger"></span>
             </div>
         </div>
         <div class="form-group row">
             <label asp-for="MobileNumber" class="col-sm-2 col-form-label">Cep Tel</label>
             <div class="col-sm-10">
                 <input type="tel" class="form-control" placeholder="Cep Tel" asp-for="MobileNumber">
+                <span asp-validation-for="MobileNumber" class="text-danger"></span>
             </div>
         </div>
         <div class="form-group row">
             <label asp-for="HousePhoneNumber" class="col-sm-2 col-form-label">Ev Tel</label>
             <div class="col-sm-10">
                 <input type="text" class="form-control" placeholder="Ev Tel" asp-for="HousePhoneNumber">
+                <span asp-validation-for="HousePhoneNumber" class="text-danger"></span>
             </div>
         </div>
         <fieldset class="form-group">
@@ -38,24 +42,23 @@
                 <legend class="col-form-label col-sm-2 pt-0">Müşteri Tipi</legend>
                 <div class="col-sm-10">
 
-                    @foreach (var item in ViewBag.CustomerTypes as List<CustomerType>)
+                    @foreach (var item in TempData["CustomerTypes"] as List<CustomerType>)
                     {
                         <div class="form-check">
-                            @{ if (Model.CustomerTypes.Any(x => x.CustomerTypeId == item.Id))
+                            @{ if (Model != null && Model.CustomerTypes != null && Model.CustomerTypes.Any(x => x.CustomerTypeId == item.Id))
                                 {
-                                    <input class="form-check-input" type="checkbox" name="CustomerTypes" id="@item.Type" value="@item.Id" checked="checked">
-                                    <input type="hidden" name="currentTypes" value="@item.Id" />
+                                    <input class="form-check-input" type="checkbox" name="CustomerTypeIds" id="@item.Type" value="@item.Id" checked="checked">
                                 }
                                 else
                                 {
-                                    <input class="form-check-input" type="checkbox" name="CustomerTypes" id="@item.Type" value="@item.Id">
+                                    <input class="form-check-input" type="checkbox" name="CustomerTypeIds" id="@item.Type" value="@item.Id">
                                 }
                             }
-                            @*<input class="form-check-input" type="checkbox" name="CustomerTypes" id="@item.Type" value="@item.Id" @(Model.CustomerTypes.Any(x => x.CustomerTypeId == item.Id) ? "checked=\"checked\"" : "")>*@
 
                             <label class="form-check-label" for="@item.Type">@item.Type</label>
                         </div>
                     }
+                    <span asp-validation-for="CustomerTypeIds" class="text-danger"></span>
                 </div>
             </div>
         </fieldset>
