Emlak ekleme alanları validationsları düzeltildi

--- a/UI/Views/Estate/Add.cshtml
+++ b/UI/Views/Estate/Add.cshtml
@@ -11,15 +11,14 @@
     <form asp-controller="Estate" asp-action="Add" method="post">
         <div class="form-group row">
             <label class="col-form-label col-sm-2 col-form-label" for="districts">Müşteri</label>
-            <select name="CustomerId" class="custom-select form- mx-3" id="customer">
+            <select name="CustomerId" class="custom-select mx-3" id="customer">
                 <option value="0">Seçiniz...</option>
                 @foreach (Customer item in ViewBag.Customers)
                 {
                     <option value="@item.Id">@item.Fullname</option>
                 }
             </select>
-            <span asp-validation-for="CustomerId" class="text-danger"></span>
-
+            <span asp-validation-for="CustomerId" class="text-danger mx-3"></span>
         </div>
         <div class="form-group row mb-0">
             <div class="form-group col-md-6">
@@ -71,7 +70,7 @@
                         <option value="@item.Id">@item.Type</option>
                     }
                 </select>
-                <span asp-validation-for="CustomerId" class="text-danger"></span>
+                <span asp-validation-for="EstateTypeId" class="text-danger"></span>
 
                 
             </div>
