Emlak ekranı değişiklikleri

--- a/UI/Views/Home/Index.cshtml
+++ b/UI/Views/Home/Index.cshtml
@@ -2,8 +2,11 @@
     ViewData["Title"] = "Ana Sayfa";
 }
 
+<div class="text-center my-5">
+    <a class="btn btn-primary w-25" asp-controller="Customer" asp-action="Add"><i class="fas fa-user-plus"></i> Müşteri Kayıt</a>
+</div>
 <div class="text-center">
-    <a class="btn btn-primary" asp-controller="Customer" asp-action="Add"><i class="fas fa-user-plus"></i> Müşteri Kayıt</a>
+    <a class="btn btn-primary w-25" asp-controller="Estate" asp-action="Add"><i class="fas fa-home"></i> Emlak Kayıt</a>
 </div>
 
 
