--- a/UI/Views/Estate/Index.cshtml
+++ b/UI/Views/Estate/Index.cshtml
@@ -9,7 +9,7 @@
     <div class="col-md-12">
         <div class="d-block">
             <h3 class="d-inline">Emlak Listesi</h3>
-            <a class="btn btn-primary float-right" asp-controller="Estate" asp-action="Add"><i class="fas fa-user-plus"></i> Emlak Kayıt</a>
+            <a class="btn btn-primary float-right" asp-controller="Estate" asp-action="Add"><i class="fas fa-home"></i> Emlak Kayıt</a>
         </div>
     </div>
     <div class="col-md-3">
@@ -18,35 +18,31 @@
             <div class="d-block">
                 <label class="my-1 mr-2" for="cities">Şehir</label>
                 <select class="custom-select my-1 mr-sm-2" id="cities">
-                    <option value="1">Adana</option>
-                    <option value="2">Adıyaman</option>
-                    <option value="3">Afyon</option>
+                    <option value="0">Seçiniz...</option>
+                    @foreach (City item in ViewBag.Cities)
+                    {
+                        <option value="@item.Id">@item.Name</option>
+                    }
                 </select>
             </div>
             <div class="d-block">
-                <fieldset disabled>
                     <label class="my-1 mr-2" for="districts">İlçe</label>
-                    <select class="custom-select my-1 mr-sm-2" id="districts">
-                        <option selected>Şehir Seç</option>
-                        <option value="1">One</option>
-                        <option value="2">Two</option>
-                        <option value="3">Three</option>
+                    <select class="custom-select my-1 mr-sm-2" id="districts" disabled>
                     </select>
-                </fieldset>
             </div>
 
             <div class="d-block">
                 <label class="my-1 mr-2" for="estateType">Satış Türü</label>
                 <select class="custom-select my-1 mr-sm-2" id="estateType">
-                    <option value="1">Kiralık</option>
-                    <option value="2">Two</option>
-                    <option value="3">Three</option>
-                    <option value="3">Three</option>
+                    @foreach (HeatingType item in ViewBag.HeatingTypes)
+                    {
+                        <option value="@item.Id">@item.Type</option>
+                    }
                 </select>
             </div>
 
         </form>
-            <button type="submit" class="btn btn-primary my-2 btn-block">Listele</button>
+        <button type="submit" class="btn btn-primary my-2 btn-block">Listele</button>
     </div>
     <div class="col-md-9">
         <div id="tableDiv" class="mt-3">
@@ -114,5 +110,33 @@
             table.buttons().container()
                 .appendTo('#tableDiv .col-md-6:eq(0)');
         });
+    </script>
+
+    <script>
+        $("#cities").change(function () {
+            var cId = $("#cities option:selected").val();
+            $('#districts').html("");
+            if (cId == 0) {
+                $('#districts').prop("disabled", true);
+            }
+            else {
+                $.ajax({
+                url: "@Url.Action("GetDistricts", "Estate")",
+                method: "POST",
+                data: { cityId: cId },
+                success: function (response) {
+                    $('#districts').prop("disabled", false);
+                    $.each(response, function (key, value) {
+                        console.log();
+                        $('#districts').append("<option value=" + value.id + ">" + this.name + "</option>");
+                    });
+                },
+                error: function () {
+                    alert("error");
+                }
+            });
+            }
+        });
+
     </script>
 }
